hphp/hack/test/implemented_by_hhi/implemented_by_nonexistent_function.hhi.exp
ERROR: File "implemented_by_nonexistent_function.hhi", line 3, characters 21-42:
Unbound name (typing): `nonexistent_function` (Typing[4107])
