hphp/hack/test/implemented_by_hhi/implemented_by_nonexistent_function.hhi
<?hh
final class C {
  <<__ImplementedBy('nonexistent_function')>>
  public function myMethod(): int;
}
